--- a/mods/BrewLAN/documentation/Changelog.txt
+++ b/mods/BrewLAN/documentation/Changelog.txt
@@ -80,7 +80,20 @@ __________.__________
   __________
   2015-10-02
   
-  * The Panopticon can now see all enemy units, except for command units, counterintel, walls, and mines.                                                                         
+  * The Panopticon can now see all enemy units, except for command units, counterintel, walls, and mines.
+  __________
+  2015-10-03
+  
+  * The Panopticon can now get vis entities on counterintel units, but not units currently cloaked anymore.
+  * Fixed a script issue with AI controlled Slinks.
+  __________
+  2015-10-04
+  
+  * Panopticon changes:
+    * Gave radar and omni.
+    * Added an upkeep cost.
+    * Added a disable feature.
+    * Cleaned up some internal garbage collection.                                                                                    
 __________.__________
 2015-04-06|0.6.1
 
