Fixed an issue with cost variance that could give units 0 speed. Fixed an issue with how Crate Drop checks for people near crates.

--- a/mods/BrewLAN/documentation/Changelog.txt
+++ b/mods/BrewLAN/documentation/Changelog.txt
@@ -126,7 +126,9 @@ __________.__________
   __________
   2015-10-17
   
-  * Paragon Game: Added the factional Paragons to the AI buildable lists.                                                                                                        
+  * Paragon Game: Added the factional Paragons to the AI buildable lists.
+  * Cost Varience: Fixed an issue that was causing some slow units to have 0 speed.
+  * Crate Drop: Fixed the issue of some people not being able to pick up the crates because another arbitrary random person couldn't see them picking it up.                                                                                                             
 __________.__________
 2015-04-06|0.6.1
 
