Panopticon adjacency bonuses.

--- a/mods/BrewLAN/documentation/Changelog.txt
+++ b/mods/BrewLAN/documentation/Changelog.txt
@@ -128,7 +128,8 @@ __________.__________
   
   * Paragon Game: Added the factional Paragons to the AI buildable lists.
   * Cost Varience: Fixed an issue that was causing some slow units to have 0 speed.
-  * Crate Drop: Fixed the issue of some people not being able to pick up the crates because another arbitrary random person couldn't see them picking it up.                                                                                                             
+  * Crate Drop: Fixed the issue of some people not being able to pick up the crates because another arbitrary random person couldn't see them picking it up.
+  * Added adjacency bonuses for the Panopticon.
 __________.__________
 2015-04-06|0.6.1
 
