--- a/mods/BrewLAN/documentation/Changelog.txt
+++ b/mods/BrewLAN/documentation/Changelog.txt
@@ -157,7 +157,14 @@ __________.__________
   * TeaD: Added a pathfinder unit. It runs fast, leaves treadmarks that stay for 10 minutes, and doesn't damage the crystal.
   * TeaD: Creeps now give their mass on death, and no longer leath a corpse.
   * TeaD: Moved the crystals nearer to the center.
-  * TeaD: Added a backup if the crystal fails to spawn.                      
+  * TeaD: Added a backup if the crystal fails to spawn.  
+  __________
+  2015-11-08
+  
+  * TeaD: Creeps now have an anti-blocking script, that removes nearby walls if they are in the same position they were 10 seconds ago.
+  * TeaD: All factions now start with the UEF TeaD Engineer, while we wait for the others to exist.
+  * TeaD: Some map specific creep gate start distances set.
+  * TeaD: New wave and units. Lasts about 10 minutes from start to finish now.                            
 __________.__________
 2015-04-06|0.6.1
 
