--- a/mods/BrewLAN/documentation/Changelog.txt
+++ b/mods/BrewLAN/documentation/Changelog.txt
@@ -166,7 +166,7 @@ __________.__________
   * TeaD: Some map specific creep gate start distances set.
   * TeaD: New wave and units. Lasts about 10 minutes from start to finish now.  
   __________
-  2015-11-04
+  2015-11-14
   
   * TeaD: Adjusted the rewards balance for creep rewards.
   * TeaD: Increased the speed and reduced the size and health of the Bike.
@@ -174,7 +174,19 @@ __________.__________
   * TeaD: Pathfinder is now a residual energy signature.
   * TeaD: Added a Shield Marine.
   * TeaD: Added more waves.
-  * TeaD: Added a Cloaked creep.                                            
+  * TeaD: Added a Cloaked creep.  
+  __________
+  2015-11-15
+  
+  * TeaD: Removed mass points.
+  * TeaD: Added conflict between TeaD and MetalWorld.
+  * TeaD: Fixed an issue with the re-issue of move orders for stuck creeps.
+  * TeaD: Added an air scout, and air scout wave.
+  * TeaD: Added a light point defence.
+  * TeaD: Added a light radar tower, to detect the cloaked creeps with.
+  * TeaD: The wave messages are now printed to the bottom of the screen.
+    * Some of the warning messages are lies, and wont be true until the content they refer to exists.   
+  * TeaD: Approx game duration ~15 minutes.                                                          
 __________.__________
 2015-04-06|0.6.1
 
