--- a/mods/BrewLAN/documentation/Changelog.txt
+++ b/mods/BrewLAN/documentation/Changelog.txt
@@ -201,7 +201,14 @@ __________.__________
     * TeaD: It has a steam effect while it is full.
   * TeaD: Creep gates will no longer start waves if the target player is dead.
   * TeaD: Leaked Non-damage-test boss waves now cause 5 damage.
-  * TeaD: Added the first damage test boss.                                         
+  * TeaD: Added the first damage test boss.
+  * TeaD: Changed the sounds of the pathfinder.
+  * TeaD: Fixed the turn radius of the pathfinder.
+  * TeaD: Added some bad map handling.  
+  __________
+  2015-11-21
+  
+  * TeaD: Added the second damage test boss.
 __________.__________
 2015-04-06|0.6.1
 
