TeaD: Missing file.

--- a/mods/BrewLAN/documentation/Changelog.txt
+++ b/mods/BrewLAN/documentation/Changelog.txt
@@ -17,7 +17,7 @@ __________.__________
 * Changed the Darkness to use the default buffs system for applying its debuffs. This has the following effects:
   * Effect is no longer affected by distance.
   * It no longer has to specifically tracks units. Meaning it no longer crashes crash when one of them dies before it does, and uses less system resources.
-  * Its now multiple stacking buffs with a duration, rather than a defined specifically each time.
+  * Its now multiple stacking buffs with a duration, rather than defined specifically each time.
   * Units leaving the area will now eventually lose the effect.
 * Fixed a bug in the vanilla buff definitions that references RADAR radius instead of OMNI radius when calculating the base size of omni buffs.
   * Unfortunately this causes log warnings every time the a unit with a omni buff has its buffs change. But that is to do with how bad the vanilla code is.
