--- a/mods/BrewLAN/documentation/Changelog.txt
+++ b/mods/BrewLAN/documentation/Changelog.txt
@@ -12,7 +12,16 @@ All changes by Sean Wheeldon (Balthazar) unless otherwise stated.
 __________.__________
 2016-01-05|0.7.5
 
-* Removed the Iyadesu related wreckage prop changes, which due to script changes in the Iyadesu actually did nothing but cause FAF conflicts. 
+* Removed the Iyadesu related wreckage prop changes, which due to script changes in the Iyadesu actually did nothing but cause FAF conflicts.
+  __________
+  2016-01-25
+  
+  * LuckyDip: Added the Moldovite & Wraith to the selections.
+  
+  __________
+  2016-01-29
+  
+  * Removed the entity tracking tables from the Panopticon, and the vis entity removal scripts.    
 __________.__________
 2015-09-05|0.7
 
