--- a/mods/BrewLAN/documentation/Changelog.txt
+++ b/mods/BrewLAN/documentation/Changelog.txt
@@ -31,7 +31,12 @@ __________.__________
   2016-02-21
   
   * Restricted units data update for FaF.
-  * Added the UEF and Cybran T3 engineering stations to the FaF engineering stations restriction.s               
+  * Added the UEF and Cybran T3 engineering stations to the FaF engineering stations restrictions.
+  __________
+  2016-03-19
+  
+  * Increased the costs of the nuke mines. Energy x3, Mass x1.5, Time x2.
+  * TeaD: Changed the anti-blocking script of the creeps from an instant wall destroy to a wall DoT.                   
 __________.__________
 2015-09-05|0.7
 
