--- a/mods/BrewLAN/documentation/Changelog.txt
+++ b/mods/BrewLAN/documentation/Changelog.txt
@@ -51,7 +51,11 @@ __________.__________
   __________
   2016-04-16
   
-  * Did additional texture work for the Ivan.                             
+  * Did additional texture work for the Ivan.
+  __________
+  2016-04-30
+  
+  * CrateDrop: Fixed the white headband tophat, which has been broken since the directory structure change.                              
 __________.__________
 2015-09-05|0.7
 
