--- a/mods/BrewLAN/documentation/Changelog.txt
+++ b/mods/BrewLAN/documentation/Changelog.txt
@@ -55,7 +55,12 @@ __________.__________
   __________
   2016-04-30
   
-  * CrateDrop: Fixed the white headband tophat, which has been broken since the directory structure change.                              
+  * CrateDrop: Fixed the white headband tophat, which has been broken since the directory structure change.
+  __________
+  2016-05-15
+  
+  * Fixed the script and assignment of UpradesFromBase; allowing the T1 MeXes to upgrade to their 3.5 variants.
+  * Fixed the upgrade issue on FaF.   
 __________.__________
 2015-09-05|0.7
 
