--- a/mods/BrewLAN/documentation/Changelog.txt
+++ b/mods/BrewLAN/documentation/Changelog.txt
@@ -85,7 +85,9 @@ __________.__________
   
   * Increased the adjacency bonus for T2 power plants with the Gantry.
     * Surrounded the total price payed is now 50% instead of 91.6 recurring %.
-      * For reference, with T1 its 75%, and with T3 its 25%.                  
+      * For reference, with T1 its 75%, and with T3 its 25%.
+  * BrewLAN no longer cares if its installed in the correct place. (Not true for all sub-mods yet.)
+    * Used an adapted version of Manimals old mod locator script, and some crazy voodoo hax so it also applies to .bp files as well as .lua files.                           
 __________.__________
 2015-09-05|0.7
 
